# ibu_pintar_article

./: .gitignore  README.md  build_errors.txt  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js
backend/: .env  Dockerfile  README.md  go.mod  go.sum  main.go
backend/handlers/: article_handler.go  auth_handler.go  comment_handler.go  profile_handler.go  upload_handler.go
backend/middleware/: auth.go  jwt.go
backend/models/: models.go
backend/services/: cloudinary_service.go
backend/utils/: response.go
backend_rust_legacy/: Cargo.toml  init.sql
backend_rust_legacy/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  upload_handler.rs
src/: App.tsx  index.css
src/api/: client.ts
src/components/admin/: ImageUpload.tsx
src/components/auth/: ProtectedRoute.tsx
src/components/layout/: Footer.tsx  Navbar.tsx
src/components/public/: ArticleCard.tsx  Hero.tsx
src/layouts/: AdminLayout.tsx  PublicLayout.tsx
src/pages/admin/: ArticleEditorPage.tsx  ArticlesPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/pages/protected/: ProfilePage.tsx
src/pages/public/: ArticleDetailPage.tsx  ExplorePage.tsx  HomePage.tsx
src/store/: useAuthStore.ts  useBlogStore.ts
src/types/: index.ts
src/utils/: mockData.ts
