[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
image = "0.25.1"
anyhow = "1.0.81"
